umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_P-92_2_1_3_ex1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 14
bond_count: 16
sum_formula: C14
graph6: Mja?GCDA??_@?@A?_
