umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_cid-1006416-changed.mol_0.png.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 23
sum_formula: C17N2O2
graph6: T??GG?HaBA?O@??DC??a??_?o???C???U???
