umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_complexring3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 42
bond_count: 48
sum_formula: C42
graph6: isO__SC@?A?C?C?A??o?A??O??_??_??O??C???o??@???C???C???A????_???C????W????O????_????O????C?????_????A?????E?????A?????A??????_?????C??????O??????w
