umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_coordination-compound-1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 36
sum_formula: C23N6Ru+2
graph6: "]hEGOC@?G?_PC@??_?G?@??C?@G?C???C??@???G???_??P???@????_???G???@????C?A?AG"
