umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_different stereo.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 36
bond_count: 38
sum_formula: C22H2N3NaO7S-1
graph6: chc_k?G?G@?O@???_?OG?G?@????????C@?@???G??C_??O???@???@????????@????C???AG????G???@C????O?????G????@??????
