umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_false_003.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 45
bond_count: 48
sum_formula: C23H18N2O2
graph6: l@GGgOCG?C?C?G?C?A??O?AB@???G??C??@???G???_??@????o???K???@_A????O????C????C????A?????_????C?????O?????O?????O?????G?????A??????O?????@??????A??????A??????@??A???????
